--- a/test/user-info.html
+++ b/test/user-info.html
@@ -1,4 +1,3 @@
-<tjs-render>
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,15 +5,11 @@
     <title>{{name}}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/components/card.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/components/icon.css">
-    <script src="https://gist.githubusercontent.com/Poulpinounette/a00c2f74960fdd31c6e09d23a3026c97/raw/b5e53aed90cfd6672f4e55fb51334f1fb45de662/tjs.js" charset="utf-8"></script>
-    <script charset="utf-8">
-      tjs.setData({"name": "master", "desc": "I'm a poulpe", "icon": "user", "fc"; "669"}).render();
-
-    </script>
+    <script  charset="utf-8" src="../dist/bundle.js"></script>
   </head>
   <body>
 
-      <div class="ui link cards">
+      <div class="ui link cards" id="tjs">
         <div class="card">
           <div class="image">
             <img src="https://semantic-ui.com/images/avatar2/large/matthew.png">
@@ -22,7 +17,7 @@
           <div class="content">
             <div class="header">{{name}}</div>
             <div class="meta">
-              <a>Friends</a>
+              <a>Friends</a>tjs
             </div>
             <div class="description">
             {{desc}}
@@ -39,7 +34,10 @@
           </div>
         </div>
       </div>
-
+      <script charset="utf-8">
+        var e = document.getElementById('tjs');
+        var data = {"name": "master", "desc": "I'm a poulpe", "icon": "user", "fc":"669"};
+        tjs.setData(data).render(e);
+      </script>
   </body>
 </html>
-</tjs-render>
