Fix version with npm. clean code

--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,16 @@
 
 </div>
 
-<script type="text/javascript" src="build/tjs.js"></script>
+<script type="text/javascript" src="../dist/poulpe.min.js"></script>
+<script>
+	var poulpe =new poulpe()
+	var data  = {
+		el:"#e",
+		data: {
+			name: "Hey"
+		}
+	}
+	poulpe.run(data)
+</script>
 </body>
 </html>
