Fix obj, added test, update readme.

--- a/test/index.html
+++ b/test/index.html
@@ -11,9 +11,9 @@
 
 </div>
 
-<script type="text/javascript" src="../dist/poulpe.min.js"></script>
+<script type="text/javascript" src="../dist/poulpe.js"></script>
 <script>
-	var poulpe =new poulpe()
+	var poulpe = new poulpe()
 	var data  = {
 		el:"#e",
 		data: {
