--- a/test/test.html
+++ b/test/test.html
@@ -13,7 +13,9 @@
     <script src="../src/index.ts"></script>
 
     <script>
+        let p = new Poulpe({element:document.getElementById("app"), data: {name: "Poulpi", animal:"Ocotpus"}})
 
+        p.run()
     </script>
 
 </body>
